add_executable(test_constant test_constant.cpp)
target_link_libraries(test_constant LibShortRate gtest_main)

add_executable(test_HoLee test_HoLee.cpp)
target_link_libraries(test_HoLee LibShortRate gtest_main)

add_executable(test_Vasicek test_Vasicek.cpp)
target_link_libraries(test_Vasicek LibShortRate gtest_main)

add_executable(test_GSR test_GSR.cpp)
target_link_libraries(test_GSR LibShortRate gtest_main)

add_executable(test_constant_affine test_constant_affine.cpp)
target_link_libraries(test_constant_affine LibShortRate gtest_main)
