add_executable(test_constant_multi test_constant_multi.cpp)
target_link_libraries(test_constant_multi LibShortRate gtest_main)

add_executable(test_gauss_multi test_gauss_multi.cpp)
target_link_libraries(test_gauss_multi LibShortRate gtest_main)

add_executable(test_affine_multi test_affine_multi.cpp)
target_link_libraries(test_affine_multi LibShortRate gtest_main)